# tm-table

./: MANIFEST.in  README.md  setup.cfg  setup.py
.github/: build.py  build_boost.sh  build_utm.sh  build_xerces_c.sh
.github/workflows/: build-package.yml  build-wheels.yml  build_wheels_macos.yml  wheel.yml
tmTable/: __init__.py  tmTable.i
