[metadata]
name = tm-table
description = Python bindings for tmtable.
long_description = file: README.md
long_description_content_type = text/markdown
author = Bernhard Arnold
author_email = bernhard.arnold@cern.ch
url = https://github.com/cms-l1-globaltrigger/tm-table
license = GPLv3

[options]
python_requires = >=3.9
